Archive2/a0/50403ae2e7a788/output
main.cpp:17:7: error: no function template matches function template specialization 'func1'
  int func1(const char* szTarget)
      ^
1 error generated.
